Fix wallet z-index bug

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,12 +18,16 @@ body,
   --ohm-gold: #f8cc82;
   --ohm-card-border-radius: 10px;
   --light-paper-bg: linear-gradient(65.7deg, #f5f5f5 8.35%, #ffffff 100%);
-  --dark-paper-bg: linear-gradient(237.43deg, #2B313D -12.81%, #171A20 132.72%);
+  --dark-paper-bg: linear-gradient(237.43deg, #2b313d -12.81%, #171a20 132.72%);
 }
 
 body {
   margin: 0;
   box-sizing: border-box;
+}
+
+.web3modal-modal-lightbox {
+  z-index: 10000 !important;
 }
 
 .app {
@@ -51,7 +55,7 @@ body {
       flex-direction: row;
       margin: 12px 0px;
     }
-  
+
     .data-row-centered {
       display: flex;
       justify-content: center;
